  BeanShell expression for each selected line, replacing the contents of
  that line with the return value of the expression
- Macros.confirm() method added, for use in macros
- BBj (Business Basic based on Java) syntax highlighting (Thomas Bock)
- BibTeX syntax highlighting (Nils Krahnstoever)
- Option added to sort recent file list by name

+ Enhancements

- HTML documentation is now generated using DocBook XSL 1.44 stylesheets
- Option in activity log window to automatically scroll to bottom on
  output (Dirk Moebius)
- Status bar improvements:
  - Tool tips for all controls
  - Double-click on caret status shows the 'go to line' dialog box
  - Instead of showing 'multi' in gray of multiple selection was
    disabled, and in black if it was enabled, the display now
    alternates between 'multi' and 'single'
  - Same for the overwrite status; it now shows 'ins' or 'ovr'
  - I/O progress display replaced with a Java heap memory indicator
  - I/O status is now shown in the message area of the status bar
- New splash screen and about box (Kris Kopicki)
- New color scheme
- Pressing Tab while a selection is active shifts it right by one level
  of indent
- Pressing S+Tab shifts the selection right by one level of indent
- If a selection ends at the beginning of a line, that line is no longer
  considered to be part of the selection by line manipulation commands
- Improved window docking feature:
  - 'Auto open' setting in Docking option pane removed, now jEdit
    remembers which dockables were open automatically
  - Docked windows are shown inside a custom control, not a tabbed pane
  - ALL dockable windows set to dock in a certain area are shown in that
    area, not just those currently 'open'. When a dockable is requested
    for the first time, it is created and loaded
- Improved HyperSearch results window
- In the Shortcuts option pane, each plugin's actions are shown in a
  separate section. This solves the problem of plugin actions having