@@ -28,9 +28,6 @@ import org.gjt.sp.util.Log;
 /**
  * An edit mode defines specific settings for editing some type of file.
  * One instance of this class is created for each supported edit mode.
- * In most cases, instances of this class can be created directly, however
- * if the edit mode needs to define custom indentation behaviour,
- * subclassing is required.
  *
  * @author Slava Pestov
  * @version $Id$
